// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it goes in and out of edit mode 1`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-2 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-4 figure {
  position: static!important;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-6>article {
  max-width: 100%;
}

.emotion-7 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-7:first-of-type {
  margin-top: 0;
}

.emotion-9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-9:focus-within {
  border-color: #20588f;
}

.emotion-9 input,
.emotion-9 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-9 input:focus,
.emotion-9 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-9 input {
  padding: 6.5px 13px;
}

.emotion-9 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-9 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-11 {
  border: calc(26px / 6.5) solid rgba(0, 0, 0, 0.1);
  border-bottom-color: #20588f;
  border-radius: 50%;
  -webkit-animation: spinnerAnimation 0.7s linear infinite;
  animation: spinnerAnimation 0.7s linear infinite;
  height: 26px;
  width: 26px;
  margin: 0;
  display: block;
}

.emotion-13 {
  margin: 10px 0;
}

.emotion-14 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-14:hover,
.emotion-14:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-14[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-14:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-16 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-16:hover,
.emotion-16:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-16[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-16:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-16:hover,
.emotion-16:active,
.emotion-16:disabled,
.emotion-16:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-16:focus {
  outline-width: medium;
}

.emotion-16:hover,
.emotion-16:focus {
  color: #7d211c;
}

.emotion-18 {
  position: fixed;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.8);
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
}

.emotion-20 {
  background-color: #f8f8f8;
  box-shadow: 0 0 2px 0 rgba(115, 115, 115, 0.5);
  width: 620px;
  border-radius: 5px;
  position: absolute;
  top: 5%;
  z-index: 2;
  max-height: 90vh;
  overflow: auto;
}

.emotion-21 {
  background: linear-gradient(180deg, #5d97a9, #508a9c);
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 1.2rem;
  padding-left: 13px;
  height: 50px;
  color: #f8f8f8;
}

.emotion-22 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  height: 50px;
  width: 50px;
}

.emotion-22:hover,
.emotion-22:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-22[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-22:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-22:hover,
.emotion-22:active,
.emotion-22:disabled,
.emotion-22:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-22:focus {
  outline-width: medium;
}

.emotion-24 {
  height: 24px;
  width: 24px;
  margin-right: 7px;
}

.emotion-25 {
  padding: 2em;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.emotion-26 {
  width: 100%;
}

.emotion-26>* {
  width: 100%;
}

.emotion-26 form {
  background-color: white;
}

.emotion-35 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
}

.emotion-35:hover,
.emotion-35:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-35[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-35:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-35:hover,
.emotion-35:active,
.emotion-35:disabled,
.emotion-35:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-35:focus {
  outline-width: medium;
}

.emotion-35,
.emotion-35:hover {
  border-radius: 5px;
  background-color: white;
  margin-top: 26px;
  padding: 3px 52px;
}

.emotion-37 article>p {
  font-family: Source Sans Pro!important;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-0"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
    />
    <div
      class="emotion-2"
    >
      <h3
        class="c-related-articles__component-title emotion-3"
      >
        Relatert innhold
      </h3>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-4"
      >
        <div
          class="drop-zone emotion-5"
        />
      </div>
      <div
        class="emotion-6"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div>
            <div
              class="emotion-7 emotion-8"
            >
              <div
                class="emotion-9 emotion-10"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <div
                  class="emotion-11 emotion-12"
                />
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-13"
        >
          Eller
        </div>
        <button
          class="emotion-14 emotion-15"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-16 emotion-15"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
    <div
      class="emotion-18"
    >
      <div
        aria-hidden="true"
        class="emotion-1"
      />
      <div
        class="emotion-20"
      >
        <div
          class="emotion-21"
        >
          Skriv inn tittel og url på ekstern artikkel
          <button
            class="emotion-22 emotion-15"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="c-icon emotion-24"
              data-license="Apache License 2.0"
              data-source="Material Design"
              fill="currentColor"
              height="1em"
              preserveAspectRatio="xMidYMid meet"
              style="vertical-align: middle;"
              viewBox="0 0 24 24"
              width="1em"
            >
              <g>
                <path
                  d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"
                />
                <path
                  d="M0 0h24v24H0z"
                  fill="none"
                />
              </g>
            </svg>
          </button>
        </div>
        <div
          class="emotion-25"
        >
          <div
            class="emotion-26"
          >
            <div>
              <div
                class="emotion-7 emotion-8"
              >
                <div
                  class="emotion-9 emotion-10"
                >
                  <input
                    data-testid="addExternalTitleInput"
                    placeholder="Tittel"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
            <div>
              <div
                class="emotion-7 emotion-8"
              >
                <div
                  class="emotion-9 emotion-10"
                >
                  <input
                    data-testid="addExternalUrlInput"
                    placeholder="https://example.com"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <button
            class="emotion-35 emotion-15"
            data-testid="taxonomyLightboxButton"
            type="button"
          >
            Lagre
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="emotion-37"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h3
        class="c-related-articles__component-title emotion-3"
      >
        Relatert innhold
      </h3>
      <div
        class="c-related-articles__articles"
      />
    </section>
  </div>
</div>
`;

exports[`it goes in and out of edit mode 2`] = `
.emotion-0 {
  position: absolute;
  width: 100%;
  z-index: 2;
}

.emotion-1 {
  position: fixed;
  top: 0;
  left: 0;
  height: 100vh;
  width: 100vw;
  z-index: 1;
  background: rgba(0, 0, 0, 0.3);
  -webkit-animation-duration: 400ms;
  animation-duration: 400ms;
  -webkit-animation-name: fadeIn;
  animation-name: fadeIn;
}

.emotion-2 {
  position: relative;
  border: 2px solid #a5bcd3;
  padding: 52px;
  padding-top: 0;
  background-color: #fff;
  z-index: 1;
}

.emotion-3 {
  font-weight: 700;
  text-transform: uppercase;
  letter-spacing: 0.05em;
  font-size: 18px;
  font-size: 1rem;
  line-height: 24px;
}

@media (min-width: 37.5625em) {
  .emotion-3 {
    font-size: 20px;
    font-size: 1.1111111111111112rem;
    line-height: 26px;
  }
}

.emotion-4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  z-index: 1;
}

.emotion-4 figure {
  position: static!important;
}

.emotion-5 {
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-6 {
  position: relative;
  -webkit-flex: 1 0 50%;
  -ms-flex: 1 0 50%;
  flex: 1 0 50%;
  max-width: 600px;
}

.emotion-6>article {
  max-width: 100%;
}

.emotion-7 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 1.5rem;
  color: #d1372e;
}

.emotion-7:hover,
.emotion-7:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-7[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-7:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-7:hover,
.emotion-7:active,
.emotion-7:disabled,
.emotion-7:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-7:focus {
  outline-width: medium;
}

.emotion-7:hover,
.emotion-7:focus {
  color: #7d211c;
}

.emotion-9 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
  -webkit-transition: background-color none;
  transition: background-color none;
  padding: 0;
  border-radius: 0;
  color: inherit;
  font-size: inherit;
  background-color: transparent;
  box-shadow: none;
  border: none;
  font-weight: 400;
  position: absolute;
  top: 0.1rem;
  right: 0.2rem;
  color: #d1372e;
}

.emotion-9:hover,
.emotion-9:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-9[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-9:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-9:hover,
.emotion-9:active,
.emotion-9:disabled,
.emotion-9:focus {
  box-shadow: none;
  color: #20588f;
  background-color: transparent;
  border: none;
}

.emotion-9:focus {
  outline-width: medium;
}

.emotion-9:hover,
.emotion-9:focus {
  color: #7d211c;
}

.emotion-12 {
  margin-top: 6.5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.emotion-12:first-of-type {
  margin-top: 0;
}

.emotion-14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  background: #f8f8f8;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
  border: 1px solid #eff0f2;
  -webkit-transition: border-color 100ms ease;
  transition: border-color 100ms ease;
  border-radius: 4px;
  min-height: 52px;
  padding-right: 13px;
}

.emotion-14:focus-within {
  border-color: #20588f;
}

.emotion-14 input,
.emotion-14 textarea {
  width: inherit;
  font-weight: 400;
  color: #444;
  font-size: 18;
  font-size: 1rem;
  line-height: 1.3;
  background: none;
  border: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.emotion-14 input:focus,
.emotion-14 textarea:focus {
  -webkit-appearance: none;
  -moz-appearance: none;
  -ms-appearance: none;
  appearance: none;
  outline: none;
}

.emotion-14 input {
  padding: 6.5px 13px;
}

.emotion-14 textarea {
  padding: 0 13px;
  height: 20px;
  margin: 14px 0;
  resize: none;
}

.emotion-14 .c-icon {
  width: 24px;
  height: 24px;
}

.emotion-16 {
  margin: 10px 0;
}

.emotion-17 {
  display: inline-block;
  color: #ffffff;
  background-color: #20588f;
  border: 2px solid #20588f;
  border-radius: 4px;
  padding: 4px 13px;
  outline-width: 0;
  cursor: pointer;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 16px;
  font-size: 0.8888888888888888rem;
  line-height: 1.625;
  font-family: 'Source Sans Pro',Helvetica,Arial,STKaiti,'华文楷体',KaiTi,SimKai,'楷体',KaiU,DFKai-SB,'標楷體',SongTi,'宋体',sans-serif;
  font-weight: 700;
  -webkit-transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  transition: all .2s cubic-bezier(0.17, 0.04, 0.03, 0.94);
  box-shadow: none;
  text-align: center;
}

.emotion-17:hover,
.emotion-17:focus {
  color: white;
  background-color: #184673;
  border: 2px solid #184673;
}

.emotion-17[disabled] {
  color: #777777;
  background-color: #e6e6e6;
  border-color: transparent;
  cursor: not-allowed;
}

.emotion-17:focus {
  box-shadow: 0 0 2px #20588f;
}

.emotion-21 article>p {
  font-family: Source Sans Pro!important;
}

<div>
  <div
    autocapitalize="false"
    autocorrect="false"
    contenteditable="true"
    data-slate-editor="true"
    data-slate-node="value"
    role="textbox"
    spellcheck="false"
    style="position: relative; outline: none; white-space: pre-wrap; word-wrap: break-word;"
    zindex="-1"
  >
    <div
      data-slate-node="element"
      style="position: relative;"
    >
      <div
        data-slate-node="element"
        style="position: relative;"
      >
        <span
          data-slate-node="text"
        >
          <span
            data-slate-leaf="true"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </span>
      </div>
    </div>
  </div>
  <div
    class="emotion-0"
    contenteditable="false"
  >
    <div
      aria-hidden="true"
      class="emotion-1"
    />
    <div
      class="emotion-2"
    >
      <h3
        class="c-related-articles__component-title emotion-3"
      >
        Relatert innhold
      </h3>
      <p>
        Dra artikkel for å endre rekkefølge
      </p>
      <div
        class="emotion-4"
      >
        <div
          class="drop-zone emotion-5"
        >
          <div
            aria-describedby="rbd-hidden-text-0-hidden-text-0"
            class="drag-item"
            data-rbd-drag-handle-context-id="0"
            data-rbd-drag-handle-draggable-id="https://www.vg.no"
            data-rbd-draggable-context-id="0"
            data-rbd-draggable-id="https://www.vg.no"
            draggable="false"
            role="button"
            tabindex="0"
          >
            <div
              class="emotion-6"
            >
              <article
                class="c-related-articles__item c-related-articles__item--external-learning-resources"
              >
                <h3
                  class="c-related-articles__title"
                >
                  <div
                    class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
                  >
                    <svg
                      aria-hidden="true"
                      class="c-icon"
                      data-license="Apache License 2.0"
                      data-source="Material Design"
                      fill="currentColor"
                      height="1em"
                      preserveAspectRatio="xMidYMid meet"
                      style="vertical-align: middle;"
                      viewBox="0 0 24 24"
                      width="1em"
                    >
                      <g>
                        <g
                          fill="none"
                          fill-rule="evenodd"
                          stroke="none"
                          stroke-width="1"
                        >
                          <g>
                            <g>
                              <polygon
                                points="0 0 24 0 24 24 0 24"
                              />
                              <path
                                d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                                fill="currentColor"
                                fill-rule="nonzero"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                  </div>
                  <span
                    class="c-related-articles__link-wrapper"
                  >
                    <a
                      class="c-related-articles__link"
                      href="https://www.vg.no"
                      rel="noopener noreferrer"
                      target="_blank"
                    >
                      Verdens gang
                    </a>
                  </span>
                </h3>
                <p
                  class="c-related-articles__description"
                />
                <p
                  class="c-related-articles__link-info"
                >
                  Nettside hos www.vg.no
                </p>
              </article>
              <button
                class="emotion-7 emotion-8"
                type="button"
              >
                <div
                  data-tooltip="Endre ekstern artikkel"
                  data-tooltip-container="true"
                >
                  <svg
                    aria-hidden="true"
                    class="c-icon"
                    data-license="Apache License 2.0"
                    data-source="Material Design"
                    data-state="closed"
                    data-trigger="true"
                    fill="currentColor"
                    height="1em"
                    preserveAspectRatio="xMidYMid meet"
                    style="vertical-align: middle;"
                    viewBox="0 0 24 24"
                    width="1em"
                  >
                    <g>
                      <path
                        d="M3 17.25V21h3.75L17.81 9.94l-3.75-3.75L3 17.25zM20.71 7.04c.39-.39.39-1.02 0-1.41l-2.34-2.34c-.39-.39-1.02-.39-1.41 0l-1.83 1.83 3.75 3.75 1.83-1.83z"
                      />
                      <path
                        d="M0 0h24v24H0z"
                        fill="none"
                      />
                    </g>
                  </svg>
                </div>
              </button>
              <button
                class="emotion-9 emotion-8"
                contenteditable="false"
                data-cy="close-related-button"
                title="Slett ekstern artikkel"
                type="button"
              >
                <svg
                  aria-hidden="true"
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 24 24"
                  width="1em"
                >
                  <g>
                    <path
                      d="M0 0h24v24H0V0z"
                      fill="none"
                    />
                    <path
                      d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
                    />
                    <path
                      d="M0 0h24v24H0z"
                      fill="none"
                    />
                  </g>
                </svg>
              </button>
            </div>
          </div>
        </div>
      </div>
      <div
        class="emotion-6"
        data-cy="styled-article-modal"
      >
        <div
          aria-expanded="false"
          aria-haspopup="listbox"
          aria-labelledby="downshift-0-label"
          role="combobox"
          style="position: relative;"
        >
          <div>
            <div
              class="emotion-12 emotion-13"
            >
              <div
                class="emotion-14 emotion-15"
              >
                <input
                  aria-autocomplete="list"
                  aria-labelledby="downshift-0-label"
                  autocomplete="off"
                  data-testid="dropdownInput"
                  id="downshift-0-input"
                  placeholder="Søk på tittel"
                  value=""
                />
                <svg
                  aria-hidden="true"
                  class="c-icon"
                  data-license="Apache License 2.0"
                  data-source="Material Design"
                  fill="currentColor"
                  height="1em"
                  preserveAspectRatio="xMidYMid meet"
                  style="vertical-align: middle;"
                  viewBox="0 0 48 48"
                  width="1em"
                >
                  <g>
                    <path
                      d="M31 28h-1.59l-.55-.55C30.82 25.18 32 22.23 32 19c0-7.18-5.82-13-13-13S6 11.82 6 19s5.82 13 13 13c3.23 0 6.18-1.18 8.45-3.13l.55.55V31l10 9.98L40.98 38 31 28zm-12 0c-4.97 0-9-4.03-9-9s4.03-9 9-9 9 4.03 9 9-4.03 9-9 9z"
                    />
                  </g>
                </svg>
              </div>
            </div>
          </div>
        </div>
        <div
          class="emotion-16"
        >
          Eller
        </div>
        <button
          class="emotion-17 emotion-8"
          data-testid="showAddExternal"
          type="button"
        >
          Legg til ekstern artikkel
        </button>
      </div>
      <button
        class="emotion-9 emotion-8"
        contenteditable="false"
        data-cy="close-related-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="c-icon"
          data-license="Apache License 2.0"
          data-source="Material Design"
          fill="currentColor"
          height="1em"
          preserveAspectRatio="xMidYMid meet"
          style="vertical-align: middle;"
          viewBox="0 0 24 24"
          width="1em"
        >
          <g>
            <path
              d="M0 0h24v24H0V0z"
              fill="none"
            />
            <path
              d="M6 19c0 1.1.9 2 2 2h8c1.1 0 2-.9 2-2V7H6v12zm2.46-7.12l1.41-1.41L12 12.59l2.12-2.12 1.41 1.41L13.41 14l2.12 2.12-1.41 1.41L12 15.41l-2.12 2.12-1.41-1.41L10.59 14l-2.13-2.12zM15.5 4l-1-1h-5l-1 1H5v2h14V4z"
            />
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
          </g>
        </svg>
      </button>
    </div>
  </div>
  <div
    class="emotion-21"
    contenteditable="false"
    data-testid="relatedWrapper"
    draggable="true"
    role="button"
    tabindex="0"
  >
    <section
      class="c-related-articles"
    >
      <h3
        class="c-related-articles__component-title emotion-3"
      >
        Relatert innhold
      </h3>
      <div
        class="c-related-articles__articles"
      >
        <article
          class="c-related-articles__item c-related-articles__item--external-learning-resources"
        >
          <h3
            class="c-related-articles__title"
          >
            <div
              class="c-content-type-badge c-content-type-badge--external-learning-resources c-content-type-badge--small c-content-type-badge--background c-content-type-badge--border"
            >
              <svg
                aria-hidden="true"
                class="c-icon"
                data-license="Apache License 2.0"
                data-source="Material Design"
                fill="currentColor"
                height="1em"
                preserveAspectRatio="xMidYMid meet"
                style="vertical-align: middle;"
                viewBox="0 0 24 24"
                width="1em"
              >
                <g>
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke="none"
                    stroke-width="1"
                  >
                    <g>
                      <g>
                        <polygon
                          points="0 0 24 0 24 24 0 24"
                        />
                        <path
                          d="M3.9,12 C3.9,10.29 5.29,8.9 7,8.9 L11,8.9 L11,7 L7,7 C4.24,7 2,9.24 2,12 C2,14.76 4.24,17 7,17 L11,17 L11,15.1 L7,15.1 C5.29,15.1 3.9,13.71 3.9,12 Z M8,13 L16,13 L16,11 L8,11 L8,13 Z M17,7 L13,7 L13,8.9 L17,8.9 C18.71,8.9 20.1,10.29 20.1,12 C20.1,13.71 18.71,15.1 17,15.1 L13,15.1 L13,17 L17,17 C19.76,17 22,14.76 22,12 C22,9.24 19.76,7 17,7 Z"
                          fill="currentColor"
                          fill-rule="nonzero"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
            </div>
            <span
              class="c-related-articles__link-wrapper"
            >
              <a
                class="c-related-articles__link"
                href="https://www.vg.no"
                rel="noopener noreferrer"
                target="_blank"
              >
                Verdens gang
              </a>
            </span>
          </h3>
          <p
            class="c-related-articles__description"
          />
          <p
            class="c-related-articles__link-info"
          >
            Nettside hos www.vg.no
          </p>
        </article>
      </div>
    </section>
  </div>
</div>
`;
